--- a/index.html
+++ b/index.html
@@ -1,9 +1,185 @@
 <html>
-    <head>
-        <title>JAN PATRICK</title>
-    <body>
-    HELLOOOOOOOOOOOOOOOOOOOOOOOOOOOO WOOOORLDDDD!!!!!!!!!!!!!!!!! 
-        
-    </body>
-    </head>
+
+<head>
+    <title> JAN PATRICK GERONIMO</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+
+    <div class="row">
+        <div id="left" class="col-2 fixed top">
+            <center> <a href=https://www.youtube.com/watch?v=kIFoI-N10-w> <img src="Picture.jpg" alt="avatar" height="200" width="200"></a> </center>
+            <center>
+                <h1>Jan Patrick Geronimo</h1>
+            </center>
+
+            <div class="degree">
+                <center>
+                    <b>
+                        <p style="font-size: 20px;">Bachelor of Science in Mechanical Engineering with Specialization in Mechatronics Engineering</p>
+                    </b>
+                </center>
+            </div>
+            <div class="school">
+
+                <center>
+                    <b>
+                        <p style="font-size: 20px;">De La Salle University - Manila</p>
+                    </b>
+                </center>
+
+            </div>
+            <div class="bullets">
+
+                <ul>
+
+
+                    <li>Objectives</li>
+                    <li>Education</li>
+                    <li>Co-curricular Activities</li>
+                    <li>Seminars Attended</li>
+                    <li>Research Papers Prepared</li>
+                </ul>
+
+            </div>
+        </div>
+        <div id="right" class="col">
+
+            <h2>Jan Patrick Geronimo</h2>
+            <div class="email">
+                <h4>jan_geronimo@dlsu.edu.ph</h4>
+            </div>
+            <div class="address">
+                <h4>30 L. Wood St., Brgy. Dolores, Taytay, Rizal</h4>
+            </div>
+            <section id="objectives">
+                <div class="section">
+                    <h4>Objectives</h4>
+                </div>
+                <div class="paragraph">
+                    <p>
+                        Focused individual looking for a mechanical engineering position in a fast-paced organization where hard work and excellence is appreciated. Bringing ability to establish details of a design and also their specifications.
+                    </p>
+                </div>
+            </section>
+            <section id="Education">
+                <div class="section">
+                    <h4>Education</h4>
+                </div>
+                <div class="paragraph">
+                    <div class="row">
+                        <div class="col-1">
+                            2018 - Present
+                        </div>
+                        <div class="col">
+                            <b>DE LA SALLE UNIVERSITY-MANILA</b>
+                            <p>
+                                Bachelor of Science in Mechanical Engineering with specialization in Mechatronics Engineering
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-1">
+                            2008-2018
+                        </div>
+                        <div class="col">
+                            <b>SAN BEDA UNIVERSITY-RIZAL</b>
+                            <p>
+                                Grade 3 - Grade 12
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="co-curricular activities">
+                <div class="section">
+                    <h4>Co-curricular Activities</h4>
+                </div>
+                <div class="paragraph">
+                    <div class="row">
+                        <div class="col-1">
+                            2016 - 2018
+                        </div>
+                        <div class="col">
+                            <b>SAN BEDA UNIVERSITY STUDENT COUNCIL-SHS</b>
+                            <p>
+                                Served to engage students in learning about democracy and leadership
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1">
+                            2013-2016
+                        </div>
+                        <div class="col">
+                            <b>SAN BEDA BADMINTON ATHLETE</b>
+                            <p>
+                                Part of San Beda's Badminton Team
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="Seminars">
+                <div class="section">
+                    <h4>Seminars Attended</h4>
+                </div>
+                <div class="paragraph">
+                    <div class="row">
+                        <div class="col-1">
+                            November 2017
+                        </div>
+                        <div class="col">
+                            <b>Freedom and Responsibility</b>
+                            <p>
+                                Jarrow Hall, San Beda University-Rizal
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-1">
+                            September 2017
+                        </div>
+                        <div class="col">
+                            <b>Science: Nuclear Power</b>
+                            <p>
+                                Jarrow Hall, San Beda University-Rizal
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="Research Paper">
+                <div class="section">
+                    <h4>Research Papers Prepared</h4>
+                </div>
+                <div class="paragraph">
+                    <div class="row">
+                        <div class="col-1">
+                            March 2018
+                        </div>
+                        <div class="col">
+                            <b>The Effectiveness of Using Modified Frame-Shear Walls to Make an Earthquake-Resistant Infrastructure</b>
+
+                            <p>
+                                Studied any advantage or disadvantage that shear walls can provide. Every component and factor concerning the durability, strength, effectiveness and practicality of using shear walls on future construction and reinforcements of infrastructures were discussed, tested and analyzed.
+                            </p>
+
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+
+        </div>
+    </div>
+
+</body>
+
 </html>
